<resources>
    <string name="app_name">Tinder</string>
    <string name="your_username">Your Username</string>
    <string name="your_password">Your Password</string>
    <string name="username">Username</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_login">Login</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="register">Register</string>
    <string name="name">Name:</string>
    <string name="about_me">About Me:</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="message">Write your message here</string>
    <string name="SendButton">Send</string>
    <string name="weight">Weight:</string>
    <string name="gender">Gender:</string>
    <string name="please_wait">Please, wait while we prepare everything for you…</string>
    <string name="preference_file_key">com.example.tinder.PREFERENCE_FILE_KEY</string>
</resources>
